[package]
name = "lug"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo = "0.11.0"
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8" }
log = "0.4.27"
rand = "0.9.1"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
lib-profile-release = "release"
